--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Meu portfólio</title>
+    <title>Meu projeto</title>
 </head>
 
 <body>
     <header class="container text-center">
-        <img src="img.1" alt="imagem que representa uma estufa inteligente" class="rounded-circle" width="200" height="200"
+        <img src="img.1.jpg" alt="imagem que representa uma estufa inteligente" class="rounded-circle" width="200" height="200"
            
         
         <h1>Vamos Celebrar a Conexão Campo-Cidade?</h1>
@@ -33,7 +33,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img.2" class="card-img-top" alt="Imagem do produtor com equipamento tecnologico">
+                    <img src="img.2.jpg" class="card-img-top" alt="Imagem do produtor com equipamento tecnológico">
                     <div class="card-body">
                         <h5 class="card-title">Produção de Alimentos: o Campo nutre o Mundo</h5>
                         <p class="card-text">A produção de alimentos é a base da vida e do desenvolvimento, garantindo 
@@ -51,13 +51,8 @@
                 <div class="card">
                     <img src="img/img3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa pela Sustentabilidade</h5>
-                        <p class="card-text">O campo é o alicerce da sustentabilidade, conectando tradição e 
-                        inovação para garantir um futuro equilibrado. A agricultura responsável e o uso consciente 
-                        dos recursos naturais são essenciais para preservar o meio ambiente e manter a produção de 
-                        alimentos acessível para todos. Cada decisão feita hoje molda o amanhã—por isso, convidamos 
-                        você a embarcar nessa jornada interativa pela sustentabilidade. Acesse nossa página e descubra 
-                        como podemos, juntos, construir um futuro mais verde e próspero! 🌱🌍✨.</p>
+                        <h5 class="card-title">🌿 Descubra como a tecnologia pode transformar o campo</h5>
+                        <p class="card-text">A Estufa Inteligente é o futuro da agricultura sustentável, combinando tecnologia de ponta com práticas responsáveis para aumentar a produtividade e preservar o meio ambiente. Sensores, automação e monitoramento em tempo real garantem o uso eficiente da água, controle climático ideal e redução de desperdícios. 🌱🌍✨.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Saiba mais</button>
                     </div>
                 </div>
