--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img.2.jpg" class="card-img-top" alt="Imagem do produtor com equipamento tecnológico">
+                    <img src="img.2.png" class="card-img-top" alt="Imagem do produtor com equipamento tecnológico">
                     <div class="card-body">
                         <h5 class="card-title">Produção de Alimentos: o Campo nutre o Mundo</h5>
                         <p class="card-text">A produção de alimentos é a base da vida e do desenvolvimento, garantindo 
