--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/img3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img2.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">🌿 Descubra como a tecnologia pode transformar o campo</h5>
                         <p class="card-text">A Estufa Inteligente é o futuro da agricultura sustentável, combinando tecnologia de ponta com práticas responsáveis para aumentar a produtividade e preservar o meio ambiente. Sensores, automação e monitoramento em tempo real garantem o uso eficiente da água, controle climático ideal e redução de desperdícios. 🌱🌍✨.</p>
@@ -61,7 +61,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/img4.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img4.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Explorando a Energia: Uma Jornada Sustentável pelo Campo!
                         </h5>
