--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="style.css">
     <title>Meu projeto</title>
 </head>
-
-<body>
-    <header class="container text-center">
-        <img src="img.1.jpg" alt="imagem que representa uma estufa inteligente" class="rounded-circle" width="200" height="200"
-           
-        
-        <h1>Vamos Celebrar a Conexão Campo-Cidade?</h1>
+<header class="container text-center my-4">
+    <img 
+        src="img.1.jpg" 
+        alt="imagem que representa uma estufa inteligente" 
+        class="rounded-circle d-block mx-auto" 
+        width="300" 
+        height="300"
+    >
+    <h1>Vamos Celebrar a Conexão Campo-Cidade?</h1>
+    
         <p>Esta página tem como objetivo divulgar informações sobre a importância das estufas inteligentes para a vida nas cidades, seja na produção de alimentos de forma eficiente, na preservação do meio ambiente ou na geração de energias limpas e sustentáveis.</p>
         <p>Vamos mergulhar em uma viagem de conexões?</p>
         <div>
